k8s/ekel-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ekel-backend
  labels:
    app: ekel-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ekel-backend
  template:
    metadata:
      labels:
        app: ekel-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65334
        runAsGroup: 65334
        fsGroup: 65334
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ekel-backend
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          image: ${IMAGE}
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /ping
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /ping
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 12
